Fix overflow in the attendance stats whilst still maintaining the 'blue toolbar' overflow on the candidates tab (#346)

--- a/frontend/components/tabs/_tabs.scss
+++ b/frontend/components/tabs/_tabs.scss
@@ -1,6 +1,9 @@
 .govuk-tabs--borderless {
   margin: 0;
-  overflow-x: hidden;
+
+  .govuk-grid-row {
+    margin-right: 0;
+  }
 
   .govuk-tabs__panel {
     border: none;
